test/type/wrong/higherrank1.kk.out
test/type/wrong/higherrank1.kk(3,16): error: unannotated parameters cannot be polymorphic
 context : function wrong(x) {
 choose(x,ids)
 }
 term : x
 inferred type: list<forall<a> (a) -> a>
 hint : annotate the parameter with a polymorphic type