test/type/wrong/higherrank1.kk
val ids = [id : forall<a> a -> a]

function wrong(x) {
  choose(x,ids)
}